--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -43,7 +43,7 @@
     "from web3.manager import RequestManager, RequestBatcher\n",
     "from sugar.config import ChainSettings, make_op_chain_settings, make_base_chain_settings\n",
     "from sugar.helpers import normalize_address, MAX_UINT256, float_to_uint256, apply_slippage, get_future_timestamp\n",
-    "from sugar.abi import sugar, slipstream, price_oracle, router, quoter, swapper\n",
+    "from sugar.abi import get_abi\n",
     "from sugar.token import Token\n",
     "from sugar.pool import LiquidityPool, LiquidityPoolForSwap\n",
     "from sugar.price import Price\n",
@@ -227,12 +227,12 @@
     "        \"\"\"Async context manager entry\"\"\"\n",
     "        self._in_context = True\n",
     "        self.web3 = AsyncWeb3(AsyncHTTPProvider(self.settings.rpc_uri))\n",
-    "        self.sugar = self.web3.eth.contract(address=self.settings.sugar_contract_addr, abi=sugar)\n",
-    "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=slipstream)\n",
-    "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=price_oracle)\n",
-    "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=router)\n",
-    "        self.quoter = self.web3.eth.contract(address=self.settings.quoter_contract_addr, abi=quoter)\n",
-    "        self.swapper = self.web3.eth.contract(address=self.settings.swapper_contract_addr, abi=swapper)\n",
+    "        self.sugar = self.web3.eth.contract(address=self.settings.sugar_contract_addr, abi=get_abi(\"sugar\"))\n",
+    "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=get_abi(\"slipstream\"))\n",
+    "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=get_abi(\"price_oracle\"))\n",
+    "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=get_abi(\"router\"))\n",
+    "        self.quoter = self.web3.eth.contract(address=self.settings.quoter_contract_addr, abi=get_abi(\"quoter\"))\n",
+    "        self.swapper = self.web3.eth.contract(address=self.settings.swapper_contract_addr, abi=get_abi(\"swapper\"))\n",
     "        return self\n",
     "\n",
     "    async def __aexit__(self, exc_type, exc_val, exc_tb):\n",
@@ -457,12 +457,12 @@
     "        \"\"\"Sync context manager entry\"\"\"\n",
     "        self._in_context = True\n",
     "        self.web3 = Web3(HTTPProvider(self.settings.rpc_uri))\n",
-    "        self.sugar = self.web3.eth.contract(address=self.settings.sugar_contract_addr, abi=sugar)\n",
-    "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=slipstream)\n",
-    "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=price_oracle)\n",
-    "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=router)\n",
-    "        self.quoter = self.web3.eth.contract(address=self.settings.quoter_contract_addr, abi=quoter)\n",
-    "        self.swapper = self.web3.eth.contract(address=self.settings.swapper_contract_addr, abi=swapper)\n",
+    "        self.sugar = self.web3.eth.contract(address=self.settings.sugar_contract_addr, abi=get_abi(\"sugar\"))\n",
+    "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=get_abi(\"slipstream\"))\n",
+    "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=get_abi(\"price_oracle\"))\n",
+    "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=get_abi(\"router\"))\n",
+    "        self.quoter = self.web3.eth.contract(address=self.settings.quoter_contract_addr, abi=get_abi(\"quoter\"))\n",
+    "        self.swapper = self.web3.eth.contract(address=self.settings.swapper_contract_addr, abi=get_abi(\"swapper\"))\n",
     "        return self\n",
     "\n",
     "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
