--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -45,6 +45,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download and save abis from etherscan\n",
+    "\n",
+    "from sugar.abi import download_contract_abi\n",
+    "from sugar.config import make_op_chain_settings\n",
+    "\n",
+    "settings =  make_op_chain_settings()\n",
+    "abi_config = {\n",
+    "    'sugar': settings.sugar_contract_addr,\n",
+    "    'slipstream': settings.slipstream_contract_addr,\n",
+    "    'nfpm': settings.nfpm_contract_addr,\n",
+    "    'price_oracle': settings.price_oracle_contract_addr,\n",
+    "    'router': settings.router_contract_addr,\n",
+    "    'quoter': settings.quoter_contract_addr,\n",
+    "    'swapper': settings.swapper_contract_addr,\n",
+    "}\n",
+    "for name, addr in abi_config.items():\n",
+    "    download_contract_abi(name=name, address=addr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,16 +85,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ETH price: 1812.3979523224696\n",
-      "tBTC price: 95688.3506011309\n",
-      "USDbC price: 1.0085229125718211\n",
-      "WETH price: 1812.3979523224696\n",
-      "T price: 0.01933236880366975\n",
-      "ETH price: 1812.3979523224696\n",
-      "tBTC price: 95688.3506011309\n",
-      "USDbC price: 1.0085229125718211\n",
-      "WETH price: 1812.3979523224696\n",
-      "T price: 0.01933236880366975\n"
+      "ETH price: 1794.1865070369051\n",
+      "tBTC price: 94167.71492592759\n",
+      "USDbC price: 0.9955810645632379\n",
+      "WETH price: 1794.1865070369051\n",
+      "T price: 0.019447838738442632\n",
+      "ETH price: 1794.1734155546346\n",
+      "tBTC price: 94167.02782067649\n",
+      "USDbC price: 0.9955739137147627\n",
+      "WETH price: 1794.1734155546346\n",
+      "T price: 0.01944769254839138\n"
      ]
     }
    ],
