--- a/src/abi.ipynb
+++ b/src/abi.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "abis_dir=\"../sugar/abis\"\n",
+    "abis_dir=\"./sugar/abis\"\n",
     "\n",
     "def download_contract_abi(name, address, abis_dir=abis_dir, etherscan_api_url=\"https://api-optimistic.etherscan.io/api\"):\n",
     "    api_key = os.getenv(\"ETHERSCAN_API_KEY\")\n",
