fix abi dir finder

--- a/src/abi.ipynb
+++ b/src/abi.ipynb
@@ -58,11 +58,14 @@
     "        json.dump(json.loads(response_data.get(\"result\")), file, indent=4)\n",
     "\n",
     "def get_abi(name):\n",
-    "    dir = abis_dir\n",
+    "    dir = None\n",
     "\n",
-    "    if not os.path.exists(dir):\n",
-    "        dir = \"./abis\"\n",
-    "        if not os.path.exists(dir): raise Exception(\"Cannot find abis directory. Did you run download_contract_abi?\")\n",
+    "    for d in [abis_dir, os.path.join(\"../\", abis_dir), \"./abis\"]:\n",
+    "        if os.path.exists(d):\n",
+    "            dir = d\n",
+    "            break\n",
+    "\n",
+    "    if not dir: raise Exception(\"Cannot find abis directory. Did you run download_contract_abi?\")\n",
     "        \n",
     "    with open(os.path.join(dir, f\"{name}.json\"), \"r\") as file:\n",
     "        return file.read()"
