add note on the abi generator

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -313,7 +313,11 @@
     "\n",
     "```bash\n",
     "pre-commit install\n",
-    "```"
+    "```\n",
+    "\n",
+    "### Regenerate ABIs if needed\n",
+    "\n",
+    "ABIs for contracts are stored inside `sugar/abis` dir. To regenerate them, use `abis.py` script (make sure you have `ETHERSCAN_API_KEY` env var set)\n"
    ]
   }
  ],
