use amount param consistently in quotes and swap

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -302,7 +302,8 @@
     "            return self.prepare_quotes(inputs, await batch.async_execute())\n",
     "\n",
     "    @require_async_context\n",
-    "    async def get_quote(self, from_token: Token, to_token: Token, amount_in: float, filter_quotes: Optional[Callable[[Quote], bool]] = None) -> Optional[Quote]:\n",
+    "    async def get_quote(self, from_token: Token, to_token: Token, amount: float, filter_quotes: Optional[Callable[[Quote], bool]] = None) -> Optional[Quote]:\n",
+    "        amount_in = amount\n",
     "        pools = self.filter_pools_for_swap(from_token=from_token, to_token=to_token, pools=await self.get_pools_for_swaps())\n",
     "        paths = self.get_paths_for_quote(from_token, to_token, pools, self.settings.excluded_tokens_addrs)\n",
     "        # TODO: investigate why this takes too long\n",
@@ -532,7 +533,8 @@
     "            return self.prepare_quotes(inputs, batch.execute())\n",
     "\n",
     "    @require_context\n",
-    "    def get_quote(self, from_token: Token, to_token: Token, amount_in: float, filter_quotes: Optional[Callable[[Quote], bool]] = None) -> Optional[Quote]:\n",
+    "    def get_quote(self, from_token: Token, to_token: Token, amount: float, filter_quotes: Optional[Callable[[Quote], bool]] = None) -> Optional[Quote]:\n",
+    "        amount_in = amount\n",
     "        pools = self.filter_pools_for_swap(from_token=from_token, to_token=to_token, pools=self.get_pools_for_swaps())\n",
     "        paths = self.get_paths_for_quote(from_token, to_token, pools, self.settings.excluded_tokens_addrs)\n",
     "        path_chunks, chain_instance = list(chunk(paths, 500)), self\n",
