--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -924,7 +924,7 @@
    "source": [
     "# velo -> usdc\n",
     "async with AsyncOPChain() as op:\n",
-    "    quote = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount_in=2)\n",
+    "    quote = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=2)\n",
     "    \n",
     "    async with AsyncOPChainSimnet() as op_simnet:\n",
     "        print(await op_simnet.swap_from_quote(quote))\n",
@@ -972,12 +972,12 @@
     "# velo -> usdc\n",
     "\n",
     "async with AsyncOPChain() as op:\n",
-    "    q1 = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount_in=10)\n",
+    "    q1 = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=10)\n",
     "    amount_out1 = q1.amount_out / 10 ** op.usdc.decimals\n",
     "\n",
     "\n",
     "with OPChain() as op:\n",
-    "    q2 = op.get_quote(from_token=op.velo, to_token=op.usdc, amount_in=10)\n",
+    "    q2 = op.get_quote(from_token=op.velo, to_token=op.usdc, amount=10)\n",
     "    amount_out2 = q2.amount_out / 10 ** op.usdc.decimals\n",
     "\n",
     "test_close(amount_out1, amount_out2, 0.001)"
