add note regarding optimistic etherscan

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -317,7 +317,7 @@
     "\n",
     "### Regenerate ABIs if needed\n",
     "\n",
-    "ABIs for contracts are stored inside `sugar/abis` dir. To regenerate them, use `abis.py` script (make sure you have `ETHERSCAN_API_KEY` env var set)\n"
+    "ABIs for contracts are stored inside `sugar/abis` dir. To regenerate them, use `abis.py` script (make sure you have `ETHERSCAN_API_KEY` env var set). We use [Optimistic Etherscan](https://optimistic.etherscan.io/).\n"
    ]
   }
  ],
