clean up imports

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "import asyncio, os, socket\n",
+    "import asyncio\n",
     "from functools import wraps\n",
     "from typing import List, TypeVar, Callable, Optional, Tuple, Dict\n",
     "from web3 import Web3, HTTPProvider, AsyncWeb3, AsyncHTTPProvider, Account\n",
@@ -50,9 +50,7 @@
     "from sugar.deposit import Deposit\n",
     "from sugar.helpers import ADDRESS_ZERO, chunk, normalize_address, Pair, find_all_paths\n",
     "from sugar.quote import QuoteInput, Quote\n",
-    "from sugar.swap import setup_planner\n",
-    "from fastcore.test import test_close\n",
-    "from fastcore.test import test_eq\n"
+    "from sugar.swap import setup_planner"
    ]
   },
   {
@@ -61,6 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "\n",
     "# monkey patching how web3 handles errors in batched requests\n",
     "# re: https://github.com/ethereum/web3.py/issues/3657\n",
     "original_format_batched_response = RequestManager._format_batched_response\n",
@@ -675,6 +675,17 @@
    "metadata": {},
    "source": [
     "Make sure simnet is running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import socket\n",
+    "from fastcore.test import test_close\n",
+    "from fastcore.test import test_eq"
    ]
   },
   {
