--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -37,8 +37,7 @@
     "import os\n",
     "from dataclasses import dataclass, make_dataclass, fields\n",
     "from sugar.helpers import normalize_address\n",
-    "from typing import List, Callable, Any, Dict\n",
-    "from fastcore.test import test_eq"
+    "from typing import List, Callable, Any, Dict"
    ]
   },
   {
@@ -214,6 +213,15 @@
    "metadata": {},
    "source": [
     "## Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.test import test_eq"
    ]
   },
   {
