--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -28,7 +28,6 @@
     "from typing import List, Tuple\n",
     "from decimal import Decimal\n",
     "from datetime import datetime, timedelta\n",
-    "from fastcore.test import test_eq\n",
     "import math"
    ]
   },
@@ -159,6 +158,15 @@
     "def apply_slippage(amount: int, slippage: float) -> int:\n",
     "    if slippage < 0 or slippage > 1: raise ValueError(\"Slippage must be between 0 and 1\")\n",
     "    return int(math.ceil(amount * (1 - slippage)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.test import test_eq"
    ]
   },
   {
