--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -39,8 +39,7 @@
     "from eth_abi.packed import encode_packed\n",
     "from dataclasses import dataclass\n",
     "from sugar.token import Token\n",
-    "from sugar.pool import LiquidityPoolForSwap\n",
-    "from fastcore.test import test_eq"
+    "from sugar.pool import LiquidityPoolForSwap"
    ]
   },
   {
@@ -98,6 +97,22 @@
     "    def path(self) -> List[Tuple[LiquidityPoolForSwap, bool]]: return self.input.path\n",
     "    @property\n",
     "    def amount_in(self) -> int: return self.input.amount_in"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.test import test_eq"
    ]
   },
   {
