--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -34,16 +34,12 @@
    "source": [
     "#| export\n",
     "\n",
-    "from sugar.token import Token\n",
-    "from sugar.quote import Quote, QuoteInput, pack_path\n",
-    "from sugar.helpers import apply_slippage, float_to_uint256\n",
+    "from sugar.quote import Quote, pack_path\n",
+    "from sugar.helpers import apply_slippage\n",
     "from sugar.pool import LiquidityPoolForSwap\n",
     "from enum import IntEnum\n",
-    "from typing import List, Dict, Any, Union, TypedDict, Optional, Tuple\n",
-    "from decimal import Decimal\n",
-    "import copy\n",
-    "from eth_abi import encode\n",
-    "from fastcore.test import test_eq\n"
+    "from typing import List, Any, Tuple\n",
+    "from eth_abi import encode"
    ]
   },
   {
@@ -276,6 +272,17 @@
     "## Test planner\n",
     "\n",
     "Let's test a few combinations of quote paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.test import test_eq\n",
+    "from sugar.token import Token\n",
+    "from sugar.quote import QuoteInput"
    ]
   },
   {
