--- a/src/abi.ipynb
+++ b/src/abi.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "abis_dir=\"./sugar/abis\"\n",
+    "abis_dir=\"abis\"\n",
     "\n",
     "def download_contract_abi(name, address, abis_dir=abis_dir, etherscan_api_url=\"https://api-optimistic.etherscan.io/api\"):\n",
     "    api_key = os.getenv(\"ETHERSCAN_API_KEY\")\n",
@@ -58,9 +58,10 @@
     "        json.dump(json.loads(response_data.get(\"result\")), file, indent=4)\n",
     "\n",
     "def get_abi(name):\n",
-    "    dir = None\n",
+    "    dir, path = None, os.path.abspath(__file__)\n",
+    "    dir_path = os.path.dirname(path)\n",
     "\n",
-    "    for d in [abis_dir, os.path.join(\"../\", abis_dir), \"./abis\"]:\n",
+    "    for d in [abis_dir, os.path.join(dir_path, abis_dir), os.path.join(dir_path, \"../\", abis_dir)]:\n",
     "        if os.path.exists(d):\n",
     "            dir = d\n",
     "            break\n",
