move abis again

--- a/src/abi.ipynb
+++ b/src/abi.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "abis_dir=\"abis\"\n",
     "\n",
-    "def download_contract_abi(name, address, abis_dir=abis_dir, etherscan_api_url=\"https://api-optimistic.etherscan.io/api\"):\n",
+    "def download_contract_abi(name, address, abis_dir=os.path.join(\"sugar\", abis_dir), etherscan_api_url=\"https://api-optimistic.etherscan.io/api\"):\n",
     "    api_key = os.getenv(\"ETHERSCAN_API_KEY\")\n",
     "    if not api_key: raise Exception(\"ETHERSCAN_API_KEY not set in environment variables\")\n",
     "    response = requests.get(etherscan_api_url, params={ \"chainid\": 1, \"module\": \"contract\", \"action\": \"getabi\", \"address\": address, \"apikey\": api_key })\n",
@@ -60,8 +60,14 @@
     "def get_abi(name):\n",
     "    dir, path = None, os.path.abspath(__file__)\n",
     "    dir_path = os.path.dirname(path)\n",
+    "    abis_locations = [\n",
+    "        abis_dir,\n",
+    "        os.path.join(dir_path, abis_dir),\n",
+    "        os.path.join(\"../\", abis_dir),\n",
+    "        os.path.join(\"../sugar\", abis_dir),\n",
+    "    ]\n",
     "\n",
-    "    for d in [abis_dir, os.path.join(dir_path, abis_dir), os.path.join(dir_path, \"../\", abis_dir)]:\n",
+    "    for d in abis_locations:\n",
     "        if os.path.exists(d):\n",
     "            dir = d\n",
     "            break\n",
