fix os import, update docs

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "import asyncio\n",
+    "import asyncio, os\n",
     "from functools import wraps\n",
     "from typing import List, TypeVar, Callable, Optional, Tuple, Dict\n",
     "from web3 import Web3, HTTPProvider, AsyncWeb3, AsyncHTTPProvider, Account\n",
