--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -110,14 +110,10 @@
     "Get a quote and swap: \n",
     "\n",
     "```python\n",
-    "from sugar.chains import AsyncBaseChain\n",
+    "from sugar.chains import AsyncOPChain\n",
     "\n",
-    "async with AsyncBaseChain() as chain:\n",
-    "    tokens = await chains.get_all_tokens(listed_only=True)\n",
-    "    def get_token_by_address(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
-    "    velo = get_token_by_address(normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"))\n",
-    "    eth = get_token_by_address(\"ETH\")\n",
-    "    quote = await op.get_quote(from_token=velo, to_token=eth, amount=10)\n",
+    "async with AsyncOPChain() as chain:\n",
+    "    quote = await op.get_quote(from_token=AsyncOPChain.velo, to_token=AsyncOPChain.eth, amount=10)\n",
     "    # check on quote to see if you are OK with the amount\n",
     "    await op.swap_from_quote(quote)\n",
     "```\n",
@@ -125,13 +121,9 @@
     "\"I am Feeling lucky\" swap:\n",
     "\n",
     "```python\n",
-    "from sugar.chains import AsyncBaseChain\n",
+    "from sugar.chains import AsyncOPChain\n",
     "\n",
-    "async with AsyncBaseChain() as chain:\n",
-    "    tokens = await chains.get_all_tokens(listed_only=True)\n",
-    "    def get_token_by_address(addr): return next(filter(lambda t: t.token_address == addr, tokens), None)\n",
-    "    velo = get_token_by_address(normalize_address(\"0x9560e827af36c94d2ac33a39bce1fe78631088db\"))\n",
-    "    eth = get_token_by_address(\"ETH\")\n",
+    "async with AsyncOPChain() as chain:\n",
     "    await op.swap(from_token=velo, to_token=eth, amount=10)\n",
     "```\n",
     "\n",
