--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -56,6 +56,7 @@
     "  \"native_token_symbol\": \"ETH\",\n",
     "  \"native_token_decimals\": 18,\n",
     "  \"swap_slippage\": 0.01,\n",
+    "  \"pricing_cache_timeout_seconds\": 5\n",
     "}\n",
     "\n",
     "\n",
@@ -89,6 +90,8 @@
     "    pool_page_size: int\n",
     "    native_token_symbol: str\n",
     "    native_token_decimals: int\n",
+    "    # how often to check for new prices\n",
+    "    pricing_cache_timeout_seconds: int\n",
     "\n",
     "    def __str__(self):\n",
     "        # go over all attributes of self\n",
