validate cache timeout setting, update readme

--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -111,7 +111,7 @@
     "def validate_settings(settings: ChainSettings) -> ChainSettings:\n",
     "    # TODO: this should actually validate stuff, duh\n",
     "    floats = [\"swap_slippage\"]\n",
-    "    ints = [\"price_batch_size\", \"price_threshold_filter\", \"pagination_limit\", \"pool_page_size\", \"native_token_decimals\"]\n",
+    "    ints = [\"price_batch_size\", \"price_threshold_filter\", \"pagination_limit\", \"pool_page_size\", \"native_token_decimals\", \"pricing_cache_timeout_seconds\"]\n",
     "    for k in floats: setattr(settings, k, float(getattr(settings, k)))\n",
     "    for k in ints: setattr(settings, k, int(getattr(settings, k)))\n",
     "    return settings\n",
