--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Base quickstart\n",
     "\n",
-    "Getting start with Sugar on Base network:\n",
+    "Getting started with Sugar on Base network:\n",
     "\n",
     "```python\n",
     "from sugar.chains import BaseChain, AsyncBaseChain\n",
