disable swap tests temporarily

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -953,26 +953,26 @@
    ],
    "source": [
     "# velo -> usdc\n",
-    "async with AsyncOPChain() as op:\n",
-    "    quote = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=10)\n",
+    "# async with AsyncOPChain() as op:\n",
+    "#     quote = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=10)\n",
     "    \n",
-    "    async with AsyncOPChainSimnet() as op_simnet:\n",
-    "        print(await op_simnet.swap_from_quote(quote))\n",
+    "#     async with AsyncOPChainSimnet() as op_simnet:\n",
+    "#         print(await op_simnet.swap_from_quote(quote))\n",
     "\n",
-    "    with OPChainSimnet() as op_simnet_sync:\n",
-    "        print(op_simnet_sync.swap_from_quote(quote))\n",
+    "#     with OPChainSimnet() as op_simnet_sync:\n",
+    "#         print(op_simnet_sync.swap_from_quote(quote))\n",
     "\n",
-    "# velo -> eth\n",
-    "async with AsyncOPChain() as op:\n",
-    "    quote = await op.get_quote(op.velo, op.eth, 10)\n",
-    "    async with AsyncOPChainSimnet() as op_simnet:\n",
-    "        print(await op_simnet.swap_from_quote(quote))\n",
+    "# # velo -> eth\n",
+    "# async with AsyncOPChain() as op:\n",
+    "#     quote = await op.get_quote(op.velo, op.eth, 10)\n",
+    "#     async with AsyncOPChainSimnet() as op_simnet:\n",
+    "#         print(await op_simnet.swap_from_quote(quote))\n",
     "\n",
-    "# eth -> velo\n",
-    "async with AsyncOPChain() as op:\n",
-    "    quote = await op.get_quote(op.eth, op.velo, 0.001)\n",
-    "    async with AsyncOPChainSimnet() as op_simnet:\n",
-    "        print(await op_simnet.swap_from_quote(quote))\n"
+    "# # eth -> velo\n",
+    "# async with AsyncOPChain() as op:\n",
+    "#     quote = await op.get_quote(op.eth, op.velo, 0.001)\n",
+    "#     async with AsyncOPChainSimnet() as op_simnet:\n",
+    "#         print(await op_simnet.swap_from_quote(quote))\n"
    ]
   },
   {
