--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -44,13 +44,12 @@
     "from web3.eth import Contract\n",
     "from web3.manager import RequestManager, RequestBatcher\n",
     "from sugar.config import ChainSettings, make_op_chain_settings, make_base_chain_settings\n",
-    "from sugar.helpers import normalize_address, MAX_UINT256, float_to_uint256, apply_slippage, get_future_timestamp\n",
+    "from sugar.helpers import normalize_address, MAX_UINT256, float_to_uint256, apply_slippage, get_future_timestamp, ADDRESS_ZERO, chunk,  Pair, find_all_paths\n",
     "from sugar.abi import get_abi\n",
     "from sugar.token import Token\n",
-    "from sugar.pool import LiquidityPool, LiquidityPoolForSwap\n",
+    "from sugar.pool import LiquidityPool, LiquidityPoolForSwap, LiquidityPoolEpoch\n",
     "from sugar.price import Price\n",
     "from sugar.deposit import Deposit\n",
-    "from sugar.helpers import ADDRESS_ZERO, chunk, normalize_address, Pair, find_all_paths\n",
     "from sugar.quote import QuoteInput, Quote\n",
     "from sugar.swap import setup_planner"
    ]
@@ -162,6 +161,10 @@
     "    \n",
     "    def prepare_pools_for_swap(self, pools: List[Tuple]) -> List[LiquidityPoolForSwap]:\n",
     "        return list(map(lambda p: LiquidityPoolForSwap.from_tuple(p), pools))\n",
+    "\n",
+    "    def prepare_pool_epochs(self, epochs: List[Tuple], tokens: List[Token], prices: List[Price]) -> List[LiquidityPoolEpoch]:\n",
+    "        tokens, prices = {t.token_address: t for t in tokens}, {price.token.token_address: price for price in prices}\n",
+    "        return list(map(lambda p: LiquidityPoolEpoch.from_tuple(p, tokens, prices), epochs))\n",
     "    \n",
     "    def filter_pools_for_swap(self, pools: List[LiquidityPoolForSwap], from_token: Token, to_token: Token) -> List[LiquidityPoolForSwap]:\n",
     "        match_tokens = set(self.settings.connector_tokens_addrs + [from_token.token_address, to_token.token_address])\n",
@@ -230,6 +233,7 @@
     "        self._in_context = True\n",
     "        self.web3 = AsyncWeb3(AsyncHTTPProvider(self.settings.rpc_uri))\n",
     "        self.sugar = self.web3.eth.contract(address=self.settings.sugar_contract_addr, abi=get_abi(\"sugar\"))\n",
+    "        self.sugar_rewards = self.web3.eth.contract(address=self.settings.sugar_rewards_contract_addr, abi=get_abi(\"sugar_rewards\"))\n",
     "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=get_abi(\"slipstream\"))\n",
     "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=get_abi(\"price_oracle\"))\n",
     "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=get_abi(\"router\"))\n",
@@ -304,6 +308,14 @@
     "        except: return None\n",
     "        tokens = await self.get_all_tokens(listed_only=False)\n",
     "        return self.prepare_pools([p], tokens, await self.get_prices(tokens))[0]\n",
+    "\n",
+    "    @require_async_context\n",
+    "    @alru_cache(maxsize=None)\n",
+    "    async def get_pool_epochs(self, lp: str, offset: int = 0, limit: int = 10) -> List[LiquidityPoolEpoch]:\n",
+    "        tokens = await chain.get_all_tokens(listed_only=False)\n",
+    "        prices = await chain.get_prices(tokens)\n",
+    "        r = await chain.sugar_rewards.functions.epochsByAddress(limit, offset, normalize_address(lp)).call()\n",
+    "        return self.prepare_pool_epochs(r, tokens, prices)\n",
     "    \n",
     "    @require_async_context\n",
     "    async def get_pools_for_swaps(self) -> List[LiquidityPoolForSwap]: return await self.get_pools(for_swaps=True)\n",
@@ -348,7 +360,6 @@
     "    async def set_token_allowance(self, token: Token, addr: str, amount: int):\n",
     "        token_contract = self.prepare_set_token_allowance_contract(token, self.web3.eth.contract)\n",
     "        return await self.sign_and_send_tx(token_contract.functions.approve(addr, amount))\n",
-    "        \n",
     "\n",
     "    @require_async_context\n",
     "    async def check_token_allowance(self, token: Token, addr: str) -> int:\n",
@@ -473,6 +484,7 @@
     "        self._in_context = True\n",
     "        self.web3 = Web3(HTTPProvider(self.settings.rpc_uri))\n",
     "        self.sugar = self.web3.eth.contract(address=self.settings.sugar_contract_addr, abi=get_abi(\"sugar\"))\n",
+    "        self.sugar_rewards = self.web3.eth.contract(address=self.settings.sugar_rewards_contract_addr, abi=get_abi(\"sugar_rewards\"))\n",
     "        self.slipstream = self.web3.eth.contract(address=self.settings.slipstream_contract_addr, abi=get_abi(\"slipstream\"))\n",
     "        self.prices = self.web3.eth.contract(address=self.settings.price_oracle_contract_addr, abi=get_abi(\"price_oracle\"))\n",
     "        self.router = self.web3.eth.contract(address=self.settings.router_contract_addr, abi=get_abi(\"router\"))\n",
@@ -551,6 +563,14 @@
     "    \n",
     "    @require_context\n",
     "    def get_pools_for_swaps(self) -> List[LiquidityPoolForSwap]: return self.get_pools(for_swaps=True)\n",
+    "\n",
+    "    @require_context\n",
+    "    @lru_cache(maxsize=None)\n",
+    "    def get_pool_epochs(self, lp: str, offset: int = 0, limit: int = 10) -> List[LiquidityPoolEpoch]:\n",
+    "        tokens = chain.get_all_tokens(listed_only=False)\n",
+    "        prices = chain.get_prices(tokens)\n",
+    "        r = chain.sugar_rewards.functions.epochsByAddress(limit, offset, normalize_address(lp)).call()\n",
+    "        return self.prepare_pool_epochs(r, tokens, prices)\n",
     "\n",
     "    @require_context\n",
     "    def _get_quotes_for_paths(self, from_token: Token, to_token: Token, amount_in: int, pools: List[LiquidityPoolForSwap], paths: List[List[Tuple]]) -> List[Optional[Quote]]:\n",
@@ -716,10 +736,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pool epochs - WIP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "got 46 epochs\n"
+     ]
+    }
+   ],
+   "source": [
+    "async with AsyncOPChain() as chain:\n",
+    "    pools = await chain.get_pools()\n",
+    "    # print(await chain.get_pool_epochs(pools[0].lp))\n",
+    "    # with OPChain() as chain:\n",
+    "    #     print(chain.get_pool_epochs(pools[0].lp))\n",
+    "    limit, offset = 100, 0\n",
+    "    while True:\n",
+    "        r = await chain.sugar_rewards.functions.epochsLatest(limit, offset).call()\n",
+    "        print(f\"got {len(r)} epochs\")\n",
+    "        if len(r) < limit: break\n",
+    "        offset += limit\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "==:\n61\n0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m     result \u001b[38;5;241m=\u001b[39m sock\u001b[38;5;241m.\u001b[39mconnect_ex((host, port))\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# are you running supersim?\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m socket\u001b[38;5;241m.\u001b[39merror \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m      9\u001b[0m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:39\u001b[0m, in \u001b[0;36mtest_eq\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtest_eq\u001b[39m(a,b):\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`test` that `a==b`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 39\u001b[0m     \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mequals\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m==\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/projects/sugar-sdk/env/lib/python3.10/site-packages/fastcore/test.py:29\u001b[0m, in \u001b[0;36mtest\u001b[0;34m(a, b, cmp, cname)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`assert` that `cmp(a,b)`; display inputs and `cname or cmp.__name__` if it fails\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cname \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: cname\u001b[38;5;241m=\u001b[39mcmp\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m cmp(a,b),\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: ==:\n61\n0"
+     ]
+    }
+   ],
    "source": [
     "host, port ='127.0.0.1', 4444\n",
     "try:\n",
